unpackaged/objects/Targets__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adherence_to_Ambit_Values_Weightage__c</fullName>
        <defaultValue>0.02</defaultValue>
        <label>Adherence to Ambit Values Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adherence_to_Ambit_Values__c</fullName>
        <defaultValue>&apos;Open rating to be available from 0 to 5&apos;</defaultValue>
        <label>Adherence to Ambit Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Ratio_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Approval Ratio Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Ratio__c</fullName>
        <label>Approval Ratio (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved </fullName>
                </value>
                <value>
                    <fullName>Initiated </fullName>
                </value>
                <value>
                    <fullName>Pending Line Manager Approval </fullName>
                </value>
                <value>
                    <fullName>Rejected </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver/ Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases_Disbursed_in_last_3_days_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Cases Disbursed in last 3 days Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cases_Disbursed_in_last_3_days__c</fullName>
        <defaultValue>&apos;Not more than 10%&apos;</defaultValue>
        <label>Cases Disbursed in last 3 days (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_and_email_skill_Weightage__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Communication and email skill Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Communication_and_email_skillset__c</fullName>
        <defaultValue>&apos;Open rating to be available from 0 to 5&apos;</defaultValue>
        <label>Communication and email skillset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Biz_Sourced_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Direct Biz Sourced Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Biz_Sourced__c</fullName>
        <label>Direct Biz Sourced (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTR_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>FTR Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTR__c</fullName>
        <label>FTR (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IRR_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>IRR Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IRR__c</fullName>
        <label>IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Penetration_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Insurance Penetration Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Penetration__c</fullName>
        <label>Insurance Penetration (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Generation_Target__c</fullName>
        <label>Lead Generation Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Generation_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Lead Generation Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Meeting_Lead_Conversation_Ratio__c</fullName>
        <label>Meeting/Lead Conversation Ratio (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Meeting_Lead_Conversion_Ratio_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Meeting/Lead Conversion Ratio Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Meeting_Targets__c</fullName>
        <label>Meetings Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meetings_Weightage__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Meetings Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPA_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>NPA Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPA__c</fullName>
        <defaultValue>&apos;As per Org Norms&apos;</defaultValue>
        <label>NPA (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_PF_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Net PF Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_PF__c</fullName>
        <label>Net PF(%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In_No_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>No of Files Logged In (No) Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In_No__c</fullName>
        <label>No of Files Logged In (No)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In_Value_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>No of Files Logged In (Value) Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In_Value__c</fullName>
        <label>No of Files Logged In (Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Files_Logged_In__c</fullName>
        <label>No of Files Logged In (Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Units_Disbursed_Weightage__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>No.of Units Disbursed Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Units_Disbursed__c</fullName>
        <label>No.of Units Disbursed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_PDD_above_norms_Weightage__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>OTC/PDD above norms Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OTC_PDD_above_norms__c</fullName>
        <defaultValue>&apos;Nil OTC and PDD pending for more than 7 days and 90 days respectively&apos;</defaultValue>
        <label>OTC/PDD above norms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_conduct_and_Cross_function_deali__c</fullName>
        <defaultValue>&apos;Open rating to be available from 0 to 5&apos;</defaultValue>
        <label>Overallconduct/Crossfunction dealings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_grooming_attendance_Weightage__c</fullName>
        <defaultValue>0.02</defaultValue>
        <label>Overall-grooming/attendance Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_grooming_attendance_discipline__c</fullName>
        <defaultValue>&apos;Open rating to be available from 0 to 5&apos;</defaultValue>
        <label>Overall-grooming/attendance/discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overallconduct_Crossfunction_Weightage__c</fullName>
        <defaultValue>0.02</defaultValue>
        <label>Overallconduct/Crossfunction Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Query_TAT_Resolution_Weightage__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Query TAT Resolution Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Query_TAT_Resolution__c</fullName>
        <defaultValue>&apos;80% cases to be resolved in T+4 days&apos;</defaultValue>
        <label>Query TAT Resolution (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume_Weightage__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Volume Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume (In Cr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volumes__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Target__c</fullName>
        <label>Yearly Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <recordTypes>
        <fullName>Product_Target</fullName>
        <active>true</active>
        <label>Product Target</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>